name:                hnn
version:             0.3
synopsis:            A reasonably fast and simple neural network library
description:         
    .
    A neural network library implemented purely in Haskell, relying on the
    hmatrix library.
    .
    This library provides a straight and simple feed-forward neural networks implementation which
    is way better than the one in hnn-0.1, in all aspects.
    .
    You can find a mini-tutorial in @AI.HNN.FF.Network@.
homepage:            http://github.com/alpmestan/hnn
bug-reports:         http://github.com/alpmestan/hnn/issues
license:             BSD3
license-file:        LICENSE
author:              Alp Mestanogullari <alpmestan@gmail.com>, Gatlin Johnson <rokenrol@gmail.com>
maintainer:          Alp Mestanogullari <alpmestan@gmail.com>
copyright:           2009-2016 Alp Mestanogullari, Gatlin Johnson
category:            AI
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     AI.HNN.FF.Network
  build-depends:
    base >=4 && <5,
    vector,
    mwc-random,
    hmatrix >= 0.16,
    random,
    vector-binary-instances >= 0.2,
    binary,
    zlib,
    bytestring
  ghc-options:         -O2 -funbox-strict-fields -Wall
  ghc-prof-options:    -O2 -funbox-strict-fields -Wall -prof -auto-all -rtsopts

source-repository head
  type: git
  location: http://github.com/alpmestan/hnn.git
